--- a/index.html
+++ b/index.html
@@ -11,9 +11,28 @@
 
 <!-- content -->
 
-<div class="container">
-    <p>this is a test</p>
-</div>
+        <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                  <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#felipeNav" aria-expanded="false">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                              </button>
+                    <a class="navbar-brand" href="#">
+                      <img alt="Brand" src="...">
+                    </a>
+                  </div>
+                  <div class="collapse navbar-collapse" id="felipeNav"></div>
+                  <ul class="nav navbar-nav">
+                      <li>Test</li>
+                  </ul>
+                </div>
+        </nav>
+
+
+    <div class="jumbotron"></div>
 
 
     
